# ultra-fast-api

./: .markdownlint.json  README.md
backend/: .env.example  .env.seed  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_remove_language_field.py  003_remove_notifications_enabled.py
backend/scripts/: init-db.sql  run_performance_tests.py  seed_on_startup.sh  seed_products.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py  service.py  utils.py
backend/src/app/database/: __init__.py  base.py  db.py
backend/src/app/database/models/: __init__.py  product.py  settings.py  token.py  user.py
backend/src/app/products/: __init__.py  router.py  schemas.py  service.py
backend/src/app/settings/: __init__.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/performance/: __init__.py  conftest.py  test_products_performance.py
backend/tests/unit/: test_auth_service.py  test_products_service.py  test_settings_service.py
frontend/ultra_fast_api/: pubspec.yaml
frontend/ultra_fast_api/.maestro/: README.md  login_flow.yaml  product_list_flow.yaml  product_search_flow.yaml  settings_flow.yaml
frontend/ultra_fast_api/android/app/: build.gradle.kts
frontend/ultra_fast_api/config/: app_config.dev.json  app_config.json  app_config.prod.json
frontend/ultra_fast_api/ios/Runner/: Info.plist
frontend/ultra_fast_api/ios/Runner.xcodeproj/: project.pbxproj
frontend/ultra_fast_api/lib/: main.dart
frontend/ultra_fast_api/lib/core/api/: api_client.dart
frontend/ultra_fast_api/lib/core/config/: app_config.dart  app_config.g.dart
frontend/ultra_fast_api/lib/core/constants/: app_constants.dart
frontend/ultra_fast_api/lib/core/providers/: app_config_provider.dart  app_config_provider.g.dart  core_providers.dart
frontend/ultra_fast_api/lib/core/router/: app_router.dart
frontend/ultra_fast_api/lib/core/storage/: token_manager.dart
frontend/ultra_fast_api/linux/: CMakeLists.txt
frontend/ultra_fast_api/linux/runner/: my_application.cc
frontend/ultra_fast_api/macos/Runner.xcodeproj/: project.pbxproj
frontend/ultra_fast_api/web/: index.html  manifest.json
frontend/ultra_fast_api/windows/: CMakeLists.txt
frontend/ultra_fast_api/windows/runner/: Runner.rc  main.cpp
(+54 files in other folders)
